1st working version of swing GUI